--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3708,6 +3708,10 @@
 		width: calc(100% + 2em);
 		margin: 0 0 3em -2em;
 	}
+	#footer a[href^="mailto:"] {
+		text-decoration: none !important;
+		border-bottom: none !important;
+	  }
 
 		#footer > * {
 			width: calc(50% - 2em);
